base64应该包裹在build里面

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/auth.scss">
+    <link rel="stylesheet" href="styles/auth.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp">
@@ -64,7 +64,7 @@
         <script src="scripts/controllers/auth/signup.js"></script>
         <script src="scripts/services/tokenservice.js"></script>
         <script src="scripts/controllers/app/pages/publish.js"></script>
-        <!-- endbuild -->
         <script src="scripts/services/base64.js"></script>
+        <!-- endbuild -->
 </body>
 </html>
