--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
         <script src="scripts/services/tokenservice.js"></script>
         <script src="scripts/controllers/app/pages/publish.js"></script>
         <script src="scripts/services/base64.js"></script>
+        <script src="scripts/controllers/admin/login.js"></script>
+        <script src="scripts/controllers/admin/base.js"></script>
         <!-- endbuild -->
 </body>
 </html>
