--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/base64.js"></script>
         <script src="scripts/controllers/admin/login.js"></script>
         <script src="scripts/controllers/admin/base.js"></script>
+        <script src="scripts/services/user/userService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
