管理员查看所有项目，bower的angular版本更新，记得bower install

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,8 @@
         <script src="scripts/services/apiservice.js"></script>
         <script src="scripts/services/adminservice.js"></script>
         <script src="scripts/controllers/admin/sidenav.js"></script>
+        <script src="scripts/controllers/admin/checkproject.js"></script>
+        <script src="scripts/services/projectservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
