--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-sidenav-menu/material-menu-sidenav.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -49,6 +50,7 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-material-sidenav-menu/material-menu-sidenav.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -73,6 +75,7 @@
         <script src="scripts/controllers/admin/sidenav.js"></script>
         <script src="scripts/controllers/admin/checkproject.js"></script>
         <script src="scripts/services/projectservice.js"></script>
+        <script src="scripts/services/tokenInjector.js"></script>
         <!-- endbuild -->
 </body>
 </html>
