项目查看与项目detail

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
         <script src="scripts/services/locals.js"></script>
         <script src="scripts/services/ack-service.js"></script>
         <script src="scripts/services/notice-service.js"></script>
+        <script src="scripts/controllers/app/project/project-list.js"></script>
+        <script src="scripts/controllers/app/project/project-detail.js"></script>
         <!-- endbuild -->
 </body>
 </html>
