--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/navigation.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/publish.css">
+    <link rel="stylesheet" href="styles/join.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp" >
