--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/services/notice-service.js"></script>
         <script src="scripts/controllers/app/project/project-list.js"></script>
         <script src="scripts/controllers/app/project/project-detail.js"></script>
+        <script src="scripts/services/message-service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
