--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/publish.css">
     <link rel="stylesheet" href="styles/join.css">
+    <link rel="stylesheet" href="styles/info.css">
+    <link rel="stylesheet" href="styles/background.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp" >
@@ -85,6 +87,7 @@
         <script src="scripts/services/notice-service.js"></script>
         <script src="scripts/controllers/app/project/project-list.js"></script>
         <script src="scripts/controllers/app/project/project-detail.js"></script>
+        <script src="scripts/controllers/app/pages/info.js"></script>
         <!-- endbuild -->
 </body>
 </html>
