--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <![endif]-->
     <!-- Add your site or application content here -->
 
-    <div ui-view style="height: 100%"></div>
+    <div ui-view class="body"></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
