发布项目 管理员审核

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/join.css">
     <link rel="stylesheet" href="styles/info.css">
     <link rel="stylesheet" href="styles/background.css">
+    <link rel="stylesheet" href="styles/prodetail.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp" >
@@ -89,6 +90,7 @@
         <script src="scripts/controllers/app/project/project-detail.js"></script>
         <script src="scripts/controllers/app/pages/info.js"></script>
         <script src="scripts/services/message-service.js"></script>
+        <script src="scripts/controllers/admin/info.js"></script>
         <!-- endbuild -->
 </body>
 </html>
