项目大厅查看通过的项目 查看详情并申请加入 creator收到消息 creator处理消息 applicant收到消息

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/info.css">
     <link rel="stylesheet" href="styles/background.css">
     <link rel="stylesheet" href="styles/prodetail.css">
+    <link rel="stylesheet" href="styles/message.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp" >
@@ -91,6 +92,7 @@
         <script src="scripts/controllers/app/pages/info.js"></script>
         <script src="scripts/services/message-service.js"></script>
         <script src="scripts/controllers/admin/info.js"></script>
+        <script src="scripts/controllers/app/pages/messages.js"></script>
         <!-- endbuild -->
 </body>
 </html>
