admin.login admin.app.project 把项目审核放到admin.app.project

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/background.css">
     <link rel="stylesheet" href="styles/prodetail.css">
     <link rel="stylesheet" href="styles/message.css">
+    <link rel="stylesheet" href="styles/admin.css">
     <!-- endbuild -->
   </head>
   <body ng-app="autoApp" >
